added divs title header, buttons, text box html

--- a/RPS.html
+++ b/RPS.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <div id="header">
+        <h1 id="title">Rock Paper Scissors</h1>
+    </div>
+    <div id="text">
+        <p id="output">Pick Rock Paper or Scissors</p>
+    </div>
+    <div id="buttons">
+        <button id="ROCK">Rock</button>
+        <button id="PAPER">Paper</button>
+        <button id="SCISSORS">Scissors</button>
+    </div>
 <script>
     //variable for computer selection
     let computerSelection;
