--- a/RPS.html
+++ b/RPS.html
@@ -9,9 +9,15 @@
     <div id="header">
         <h1 id="title">Rock Paper Scissors</h1>
     </div>
-    <div>
-        <button id="playButton">Play</button>
+    <div id="playerWin">Player Wins</div>
+    <div id="playerTally">
+        <p id="tallyPlayer"></p>
     </div>
+    <div id="ComputerWin">Computer Wins</div>
+    <div id="computerTally">
+        <p id="tallyComputer"></p>
+    </div>
+    
     <div id="text">
         <p id="gameNarrative">Pick Rock Paper or Scissors</p>
     </div>
@@ -19,6 +25,9 @@
         <button id="ROCK">Rock</button>
         <button id="PAPER">Paper</button>
         <button id="SCISSORS">Scissors</button>
+    </div>
+    <div>
+        <button id="playAgain">Play Again</button>
     </div>
 <script src="RPS.js">
 </script>
