--- a/RPS.html
+++ b/RPS.html
@@ -9,6 +9,7 @@
 <body id="body">
     <div id="header" class="header">
         <h1 id="title" class="title">Rock Paper Scissors</h1>
+        <img id="wide" src="imgs/city.jpg">
     </div>
 
     <div id="tallies">
@@ -24,7 +25,7 @@
         </div>
         <div id="compBox">
             <img id="titans" src="imgs/titans.jpg" alt="pic of some scary titans">
-            <div id="ComputerWin">Computer Wins</div>
+            <div id="computerWin">Computer Wins</div>
             <div id="computerTally">
                 <p id="tallyComputer"></p>
             </div>
