added button divs, play box divs

--- a/RPS.html
+++ b/RPS.html
@@ -4,12 +4,16 @@
     <title>Rock Paper Scissors</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="cssStyles.css" type="text/css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body id="body">
     <div id="header" class="header">
         <h1 id="title" class="title">Rock Paper Scissors</h1>
-        <img id="wide" src="imgs/city.jpg">
+        <img id="titans3" src="imgs/titans3.jpeg">
+        <img id="ymir" src="imgs/ymir.jpeg">
+        <img id="wide" src="imgs/wide.jpg">
+        <img id="topwall" src="imgs/topwall.jpeg">
+        <img id="titans2" src="imgs/titans2.jpeg">
     </div>
 
     <div id="tallies">
@@ -37,11 +41,17 @@
             <p id="gameNarrative">Pick Rock Paper or Scissors</p>
         </div>
         <div id="playerButtons">
-            <button id="ROCK">Rock</button>
-            <button id="PAPER">Paper</button>
-            <button id="SCISSORS">Scissors</button>
+            <div id="rockButton">
+                <button id="ROCK">Rock</button>
+            </div>
+            <div id="paperButton">
+                <button id="PAPER">Paper</button>
+            </div>
+            <div id="scissorsButton">
+                <button id="SCISSORS">Scissors</button>
+            </div>
         </div>
-        <div>
+        <div id="again">
             <button id="playAgain">Play Again</button>
         </div>
         <div id="winnerPic">
