added <p> text to #centerPic

--- a/RPS.html
+++ b/RPS.html
@@ -25,6 +25,8 @@
             </div>
         </div>
         <div id="centerPic">
+            <p id="fiveText">It has happened again... The first to five wins...</p>
+            <p id="fightText">"If you win, you live. If you lose, you die. if you don't fight, you can't win!"</p>
             <img id="erwinPic" src="imgs/erwin.jpg" alt="leader erwin commanding his troops to advance heroically">
         </div>
         <div id="compBox">
