--- a/RPS.html
+++ b/RPS.html
@@ -19,7 +19,7 @@
     <div id="tallies">
         <div id="playerBox">
             <img id="scouts" src="imgs/scouts2.png" alt="the scout regiment ready to battle">
-            <div id="playerWin">Player Wins</div>
+            <div id="playerWin">Scout Wins</div>
             <div id="playerTally">
                 <p id="tallyPlayer"></p>
             </div>
@@ -28,10 +28,11 @@
             <p id="fiveText">It has happened again... The first to five wins...</p>
             <p id="fightText">"If you win, you live. If you lose, you die. if you don't fight, you can't win!"</p>
             <img id="erwinPic" src="imgs/erwin.jpg" alt="leader erwin commanding his troops to advance heroically">
+            <img id="winPic" src="imgs/salute.png" alt="brave scout troup showing salute over their hearts">
         </div>
         <div id="compBox">
             <img id="titans" src="imgs/titans.jpg" alt="pic of some scary titans">
-            <div id="computerWin">Computer Wins</div>
+            <div id="computerWin">Titan Wins</div>
             <div id="computerTally">
                 <p id="tallyComputer"></p>
             </div>
@@ -40,7 +41,7 @@
     
     <div id="gamePlay">
         <div id="text">
-            <p id="gameNarrative">Pick Rock Paper or Scissors</p>
+            <p id="gameNarrative">Choose your weapon: Rock Paper or Scissors</p>
         </div>
         <div id="playerButtons">
             <button id="ROCK">Rock</button>
@@ -49,8 +50,6 @@
         </div>
         <div id="again">
             <button id="playAgain">Play Again</button>
-        </div>
-        <div id="winnerPic">
         </div>
     </div>
 <script src="RPS.js">
