add gameText class to texts

--- a/RPS.html
+++ b/RPS.html
@@ -19,29 +19,29 @@
     <div id="tallies">
         <div id="playerBox">
             <img id="scouts" src="imgs/scouts2.png" alt="the scout regiment ready to battle">
-            <div id="playerWin">Scout Wins</div>
+            <div id="playerWin" class="gameText">Scout Wins</div>
             <div id="playerTally">
-                <p id="tallyPlayer"></p>
+                <p id="tallyPlayer" class="gameText"></p>
             </div>
         </div>
         <div id="centerPic">
-            <p id="fiveText">It has happened again... The first to five wins...</p>
-            <p id="fightText">"If you win, you live. If you lose, you die. if you don't fight, you can't win!"</p>
+            <p id="fiveText" class="gameText">It has happened again... The first to five wins...</p>
+            <p id="fightText"class="gameText">"If you win, you live. If you lose, you die. if you don't fight, you can't win!"</p>
             <img id="erwinPic" src="imgs/erwin.jpg" alt="leader erwin commanding his troops to advance heroically">
             <img id="winPic" src="imgs/salute.png" alt="brave scout troup showing salute over their hearts">
         </div>
         <div id="compBox">
             <img id="titans" src="imgs/titans.jpg" alt="pic of some scary titans">
-            <div id="computerWin">Titan Wins</div>
+            <div id="computerWin" class="gameText">Titan Wins</div>
             <div id="computerTally">
-                <p id="tallyComputer"></p>
+                <p id="tallyComputer" class="gameText"></p>
             </div>
         </div>
     </div>
     
     <div id="gamePlay">
         <div id="text">
-            <p id="gameNarrative">Choose your weapon: Rock Paper or Scissors</p>
+            <p id="gameNarrative" class="gameText">Choose your weapon: Rock Paper or Scissors</p>
         </div>
         <div id="playerButtons">
             <button id="ROCK">Rock</button>
