add headerpic class

--- a/RPS.html
+++ b/RPS.html
@@ -9,11 +9,11 @@
 <body id="body">
     <div id="header" class="header">
         <h1 id="title" class="title">Rock Paper Scissors</h1>
-        <img id="titans3" src="imgs/titans3.jpeg">
-        <img id="ymir" src="imgs/ymir.jpeg">
-        <img id="wide" src="imgs/wide.jpg">
-        <img id="topwall" src="imgs/topwall.jpeg">
-        <img id="titans2" src="imgs/titans2.jpeg">
+        <img id="titans3" class="headerPics" src="imgs/titans3.jpeg">
+        <img id="ymir" class="headerPics" src="imgs/ymir.jpeg">
+        <img id="wide" class="headerPics" src="imgs/wide.jpg">
+        <img id="topwall" class="headerPics" src="imgs/topwall.jpeg">
+        <img id="titans2" class="headerPics" src="imgs/titans2.jpeg">
     </div>
 
     <div id="tallies">
