added class buttons to player buttons

--- a/RPS.html
+++ b/RPS.html
@@ -44,9 +44,9 @@
             <p id="gameNarrative" class="gameText">Choose your weapon: Rock Paper or Scissors</p>
         </div>
         <div id="playerButtons">
-            <button id="ROCK">Rock</button>
-            <button id="PAPER">Paper</button>
-            <button id="SCISSORS">Scissors</button>
+            <button id="ROCK" class="buttons">Rock</button>
+            <button id="PAPER" class="buttons">Paper</button>
+            <button id="SCISSORS" class="buttons">Scissors</button>
         </div>
         <div id="again">
             <button id="playAgain">Play Again</button>
