added tallyText class

--- a/RPS.html
+++ b/RPS.html
@@ -19,9 +19,9 @@
     <div id="tallies">
         <div id="playerBox">
             <img id="scouts" src="imgs/scouts2.png" alt="the scout regiment ready to battle">
-            <div id="playerWin" class="gameText">Scout Wins</div>
+            <div id="playerWin" class="gameText tallyText">Scout Wins</div>
             <div id="playerTally">
-                <p id="tallyPlayer" class="gameText"></p>
+                <p id="tallyPlayer" class="gameText tallyText"></p>
             </div>
         </div>
         <div id="centerPic">
@@ -32,9 +32,9 @@
         </div>
         <div id="compBox">
             <img id="titans" src="imgs/titans.jpg" alt="pic of some scary titans">
-            <div id="computerWin" class="gameText">Titan Wins</div>
+            <div id="computerWin" class="gameText tallyText">Titan Wins</div>
             <div id="computerTally">
-                <p id="tallyComputer" class="gameText"></p>
+                <p id="tallyComputer" class="gameText tallyText"></p>
             </div>
         </div>
     </div>
