--- a/RPS.html
+++ b/RPS.html
@@ -29,6 +29,7 @@
             <p id="fightText"class="gameText">"If you win, you live. If you lose, you die. if you don't fight, you can't win!"</p>
             <img id="erwinPic" src="imgs/erwin.jpg" alt="leader erwin commanding his troops to advance heroically">
             <img id="winPic" src="imgs/salute.png" alt="brave scout troup showing salute over their hearts">
+            <img id="losePic" src="imgs/titaneating.jpg" alt="titan throwing human in mouth">
         </div>
         <div id="compBox">
             <img id="titans" src="imgs/titans.jpg" alt="pic of some scary titans">
